fixed brainstorming nav item being too close on the left margin

--- a/src/components/section-nav-item/section-nav-item-brainstorming.styles.scss
+++ b/src/components/section-nav-item/section-nav-item-brainstorming.styles.scss
@@ -4,6 +4,7 @@
     width: 82%;
     padding: 10px;
     margin: 25px 0;
+    margin-left: 30px;
     align-self: center;
     align-items: center;
     cursor: pointer;
